--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="./homepage.html">Home</a></li>
+                    <li><a href="./index.html">Home</a></li>
                     <li><a href="./aboutpage.html">About</a></li>
                     <li><a href="./project.html">Project</a></li>
                     <li><a href="./contact.html">Contact</a></li>
