--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>About Me</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style1.css">
 </head>
 <body>
     <!-- ส่วนหัว -->
@@ -29,22 +29,12 @@
     <section class="profile">
         <div class="container profile-content">
             <div class="profile-text">
-                <p>About me</p>
-                <h1>Resume</h1>
-                <p>I am currently studying for a bachelor's degree at King Mongkut's University of Technology Thonburi (KMUTT), majoring in game development.</p><br>
-                <h2>Personal information</h2><br>
-                <p>Birthday : September 21, 2003</p>
-                <p>Nickname : Sand</p>
-                <p>Nationality : Thai</p>
-                <p>Hobbies : play a game,listen to music,trade forex</p><br>
-                <h2>Skills</h2><br>
-                <p>- Modelling</p>
-                <p>- Sound design</p>
-                <p>- Play basketball</p>
-                <p></p>
+                <p>Hello, Welcome</p>
+                <h1>I'm Sand</h1>
+                <p>Knowledge,ability and experience are important things that will make us successful. If any one is lacking, it will make us slower to reach our goals.</p>
             </div>
             <div class="profile-image">
-                <img src="picture/sanny.jpg" alt="Profile Picture">
+                <img src="picture/myphoto.jpg" alt="Profile Picture">
             </div>
         </div>
     </section>
