--- a/project.html
+++ b/project.html
@@ -16,10 +16,10 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="./homepage.html">Home</a></li>
+                    <li><a href="./index.html">Home</a></li>
                     <li><a href="./aboutpage.html">About</a></li>
                     <li><a href="./project.html">Project</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
