--- a/project.html
+++ b/project.html
@@ -41,8 +41,8 @@
                 </div>
                 <div class="portfolio-item">
                     <img src="picture/soundlogo.png" alt="Project 3">
-                    <h3>Sound Design</h3>
-                    <p>In this section, there will be sound design works.</p>
+                    <h3>Web design</h3>
+                    <p>In this section, there will be web design works.</p>
                 </div>
             </div>
         </div>
