--- a/aboutpage.html
+++ b/aboutpage.html
@@ -36,6 +36,7 @@
                 <p>Birthday : September 21, 2003</p>
                 <p>Nickname : Sand</p>
                 <p>Nationality : Thai</p>
+                <p>Phone : 0877593755</p>
                 <p>Hobbies : play a game,listen to music,trade forex</p><br>
                 <h2>Skills</h2><br>
                 <p>- Modelling</p>
