--- a/project.html
+++ b/project.html
@@ -33,20 +33,52 @@
                     <img src="picture/sketchfab-logo-white.png" alt="Project 1">
                     <h3>Modeling</h3>
                     <p>In this section, there will be various modeling works.</p>
+                    <div class="dropdown">
+                        <button class="dropbtn">View More</button>
+                        <div class="dropdown-content">
+                            <a href="https://drive.google.com/drive/folders/172GqGRfPwUBIa7WiX6QtG60j3-yTGSrQ?usp=drive_link"target="_blank">Models</a>
+
+                        </div>
+                    </div>
                 </div>
                 <div class="portfolio-item">
                     <img src="picture/animation-logo.png" alt="Project 2">
                     <h3>Animation</h3>
                     <p>In this section, there will be various animation works.</p>
+                    <div class="dropdown">
+                        <button class="dropbtn">View More</button>
+                        <div class="dropdown-content">
+                            <a href="https://youtu.be/ZhGWLhYbbOE"target="_blank">แจ็กผู้ฆ่ายักษ์</a>
+                            <a href="https://youtu.be/IGfJz-Gzy8g"target="_blank">Happy Chinese New Year</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="portfolio-item">
                     <img src="picture/soundlogo.png" alt="Project 3">
                     <h3>Web design</h3>
                     <p>In this section, there will be web design works.</p>
+                    <div class="dropdown">
+                        <button class="dropbtn">View More</button>
+                        <div class="dropdown-content">
+                            <a href="https://sand066.github.io/Assign3/"target="_blank">Assignment3 </a>
+                            <a href="https://sand066.github.io/Assign4/"target="_blank">Assignment4 </a>
+                            <a href="https://sand066.github.io/Assign5/"target="_blank">Assignment5 </a>
+                            <a href="https://sand066.github.io/Assign6/"target="_blank">Assignment6 </a>
+                            <a href="https://sand066.github.io/Assign7/"target="_blank">Assignment7 </a>
+                        </div>
+                    </div>
                 </div>
+                <div class="portfolio-item">
+                    <img src="picture/game-icon.png" alt="Project 3">
+                    <h3>Game development</h3>
+                    <p>In this section, there will be game design works.</p>
+                    <div class="dropdown">
+                        <button class="dropbtn">View More</button>
+                        <div class="dropdown-content">
+                            <a href="https://github.com/sand066/RUNFORWIN.git"target="_blank">RUNFORWIN </a>
+                        </div>
             </div>
         </div>
     </section>
-    
 </body>
 </html>
