--- a/aboutpage.html
+++ b/aboutpage.html
@@ -31,16 +31,19 @@
             <div class="profile-text">
                 <p>About me</p>
                 <h1>Resume</h1>
-                <p>I am currently studying for a bachelor's degree at King Mongkut's University of Technology Thonburi (KMUTT), majoring in game development.</p><br>
+                <p>I am currently studying for a bachelor's degree at King Mongkut's University of Technology Thonburi (KMUTT), majoring in game development.</p>
                 <h2>Personal information</h2><br>
                 <p>Birthday : September 21, 2003</p>
                 <p>Nickname : Sand</p>
                 <p>Nationality : Thai</p>
-                <p>Hobbies : play a game,listen to music,trade forex</p><br>
+                <p>Hobbies : play a game,listen to music</p>
                 <h2>Skills</h2><br>
                 <p>- Modelling</p>
                 <p>- Sound design</p>
                 <p>- Play basketball</p>
+                <h2>Interest</h2><br>
+                <p>- Trade forex</p>
+                <p>- Investment</p>
                 <p></p>
             </div>
             <div class="profile-image">
