--- a/contact.html
+++ b/contact.html
@@ -55,5 +55,13 @@
         </div>
     </section>
 
+    <footer>
+        <div class="container3">
+            <ul class="footer-links">
+                <li><a href="https://docs.google.com/document/d/1AXj_rTnC8__QPzoALJG5oZ0VqY9_oDBW3RMUfABbFEs/edit?usp=sharing"target="_blank">Reference</a></li>
+
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
