--- a/project.html
+++ b/project.html
@@ -54,7 +54,7 @@
                     </div>
                 </div>
                 <div class="portfolio-item">
-                    <img src="picture/soundlogo.png" alt="Project 3">
+                    <img src="picture/website-icon.png" alt="Project 3">
                     <h3>Web design</h3>
                     <p>In this section, there will be web design works.</p>
                     <div class="dropdown">
@@ -80,5 +80,6 @@
             </div>
         </div>
     </section>
+
 </body>
 </html>
