--- a/aboutpage.html
+++ b/aboutpage.html
@@ -29,6 +29,7 @@
     <section class="profile">
         <div class="container profile-content">
             <div class="profile-text">
+                <p>About me</p>
                 <h1>Resume</h1>
                 <p>I am currently studying for a bachelor's degree at King Mongkut's University of Technology Thonburi (KMUTT), majoring in game development.</p>
                 <h2>Personal information</h2><br>
